--- a/stacks/portainer - Copia.yaml
+++ b/stacks/portainer - Copia.yaml
@@ -8,7 +8,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/volumes:/var/lib/docker/volumes
     networks:
-      - network_nexiabr
+      - network_public
     deploy:
       mode: global
       placement:
@@ -20,7 +20,7 @@ services:
     volumes:
       - portainer_data:/data
     networks:
-      - network_nexiabr
+      - network_public
     deploy:
       mode: replicated
       replicas: 1
@@ -28,7 +28,7 @@ services:
         constraints: [node.role == manager]
       labels:
         - "traefik.enable=true"
-        - "traefik.docker.network=network_nexiabr"
+        - "traefik.docker.network=network_public"
         - "traefik.http.routers.portainer.rule=Host(`dash.nexiabr.com`)"
         - "traefik.http.routers.portainer.entrypoints=websecure"
         - "traefik.http.routers.portainer.priority=1"
@@ -37,10 +37,10 @@ services:
         - "traefik.http.services.portainer.loadbalancer.server.port=9000"
 
 networks:
-  network_nexiabr:
+  network_public:
     external: true
     attachable: true
-    name: network_nexiabr
+    name: network_public
 
 volumes:
   portainer_data:
