Adicionando fluxo inicial CI/CD para setup da VPS e deploy das stacks

--- a/.github/workflows/setup-vps.yml
+++ b/.github/workflows/setup-vps.yml
@@ -16,6 +16,7 @@ jobs:
       # Adicionando a VPS ao arquivo known_hosts
       - name: Add VPS to known_hosts
         run: |
+          mkdir -p ~/.ssh  # Cria o diretório caso não exista
           ssh-keyscan -H 156.67.83.29 >> ~/.ssh/known_hosts
 
       # Configurar chave SSH para acesso à VPS
