--- a/.github/workflows/setup-vps.yml
+++ b/.github/workflows/setup-vps.yml
@@ -13,17 +13,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # Adicionando a VPS ao arquivo known_hosts
-      - name: Add VPS to known_hosts
+        - name: Set up SSH key
         run: |
-          mkdir -p ~/.ssh  # Cria o diretório caso não exista
-          ssh-keyscan -H 156.67.83.29 >> ~/.ssh/known_hosts
-
-          - name: Set up SSH key
-          run: |
-            echo "$SSH_KEY_CONTABO_NEXIABR" | tr -d '\r' > ~/.ssh/id_rsa
-            chmod 600 ~/.ssh/id_rsa
-            ssh-add ~/.ssh/id_rsa
+          mkdir -p ~/.ssh
+          echo "$SSH_KEY_CONTABO_NEXIABR" | tr -d '\r' > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-add ~/.ssh/id_rsa
+      
         
 
       # Configuração inicial da VPS
