--- a/.github/workflows/setup-vps.yml
+++ b/.github/workflows/setup-vps.yml
@@ -13,14 +13,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      # Configurando chave SSH
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_KEY_CONTABO_NEXIABR" | tr -d '\r' > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-add ~/.ssh/id_rsa
-    
-        
+          
+      # Adicionando a VPS ao arquivo known_hosts
+      - name: Add VPS to known_hosts
+        run: |
+          ssh-keyscan -H 156.67.83.29 >> ~/.ssh/known_hosts
 
       # Configuração inicial da VPS
       - name: Initial VPS setup
