--- a/stacks/postgress.yaml
+++ b/stacks/postgress.yaml
@@ -7,7 +7,7 @@ services:
       - POSTGRES_PASSWORD=QJPvwE8XD2gd
       - TZ=America/Sao_Paulo
     networks:
-      - network_public
+      - network_Nexia
     ports:
       - 5432:5432
     volumes:
@@ -32,4 +32,4 @@ volumes:
 networks:
   network_public:
     external: true
-    name: network_public
+    name: network_Nexia
